--- a/templates/user-info.html.jinja
+++ b/templates/user-info.html.jinja
@@ -1,181 +1,172 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="preconnect" href="https://assets-z1-113a.serinanya.fwnet" />
-        <title>LittleSkin 用户信息</title>
-        <meta name="viewport" content="initial-scale=1" />
-        <script
-            async
-            src="https://assets-z1-113a.serinanya.fwnet/fontawesome@6.5.2/js/all.min.js"
-        ></script>
-        <style>
-            @import 'https://assets-z1-113a.serinanya.fwnet/bulma@1.0.0/css/bulma.min.css';
-            @import 'https://assets-z1-113a.serinanya.fwnet/fontawesome@6.5.2/css/fontawesome.min.css';
-        </style>
-    </head>
 
-    <body>
-        <div class="container px-6">
-            <section class="hero">
-                <div class="hero-body">
-                    <p class="title">LittleSkin 用户信息</p>
-                    <p class="subtitle">生成于 {{ generated_at }}</p>
-                </div>
-            </section>
-            <div class="fixed-grid has-3-cols">
-                <div class="grid">
-                    <div class="field cell">
-                        <label class="label">UID</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input is-family-monospace has-text-weight-bold is-focused"
-                                type="number"
-                                value="{{ uid }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-id-card"></i>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="field cell is-col-span-2">
-                        <label class="label">用户名</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input"
-                                type="text"
-                                value="{{ nickname }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-user"></i>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="field cell">
-                        <label class="label">积分</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input"
-                                type="number"
-                                value="{{ score }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-wallet"></i>
-                            </span>
-                        </div>
-                    </div>
+<head>
+    <link rel="preconnect" href="https://assets-z1-113a.serinanya.fwnet" />
+    <title>LittleSkin 用户信息</title>
+    <meta name="viewport" content="initial-scale=1" />
+    <script async src="https://assets-z1-113a.serinanya.fwnet/fontawesome@6.5.2/js/all.min.js"></script>
+    <style>
+        @import 'https://assets-z1-113a.serinanya.fwnet/bulma@1.0.0/css/bulma.min.css';
+        @import 'https://assets-z1-113a.serinanya.fwnet/fontawesome@6.5.2/css/fontawesome.min.css';
+    </style>
+</head>
 
-                    <div class="field cell is-col-span-2">
-                        <label class="label">注册时的 IP 属地</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input"
-                                type="text"
-                                value="{{ network }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-location-dot"></i>
-                            </span>
-                        </div>
+<body>
+    <div class="container px-6">
+        <section class="hero">
+            <div class="hero-body">
+                <p class="title">LittleSkin 用户信息</p>
+                <p class="subtitle">生成于 {{ generated_at }}</p>
+            </div>
+        </section>
+        <div class="fixed-grid has-3-cols">
+            <div class="grid">
+                {% if permission != -1 %}
+                <div class="field cell">
+                    <label class="label">UID</label>
+                    <div class="control has-icons-left">
+                        <input class="input is-family-monospace has-text-weight-bold is-focused" type="number"
+                            value="{{ uid }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-id-card"></i>
+                        </span>
+                    </div>
+                </div>
+                {% else %}
+                <div class="field cell">
+                    <label class="label">UID</label>
+                    <div class="control has-icons-left">
+                        <input class="input is-family-monospace has-text-weight-bold is-focused is-danger" type="number"
+                            value="{{ uid }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-handcuffs"></i>
+                        </span>
+                    </div>
+                    <p class="help is-danger">账号处于封禁状态</p>
+                </div>
+                {% endif %}
+                <div class="field cell is-col-span-2">
+                    <label class="label">用户名</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="text" value="{{ nickname }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-user"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="field cell">
+                    <label class="label">积分</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="number" value="{{ score }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-wallet"></i>
+                        </span>
+                    </div>
+                </div>
+
+                <div class="field cell is-col-span-2">
+                    <label class="label">注册时的 IP 属地</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="text" value="{{ network }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-location-dot"></i>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="fixed-grid has-2-cols">
-                <div class="grid">
-                    <div class="field">
-                        <label class="label">QQ</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input is-family-monospace"
-                                type="number"
-                                value="{{ qq }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-brands fa-qq"></i>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label class="label">QQ 昵称</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input"
-                                type="text"
-                                value="{{ qq_nickname }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-wallet"></i>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="fixed-grid has-2-cols">
-                <div class="grid">
-                    <div class="field">
-                        <label class="label">注册时间</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input"
-                                type="text"
-                                value="{{ register_at }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-door-open"></i>
-                            </span>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label class="label">最后操作时间</label>
-                        <div class="control has-icons-left">
-                            <input
-                                class="input"
-                                type="text"
-                                value="{{ last_sign_at }}"
-                            />
-                            <span class="icon is-small is-left">
-                                <i class="fa-solid fa-right-to-bracket"></i>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% if not verified %}
-            <div class="field">
-                <label class="label">邮箱</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input
-                        class="input is-danger is-family-monospace"
-                        type="email"
-                        value="{{ email }}"
-                    />
-                    <span class="icon is-small is-left">
-                        <i class="fa-solid fa-envelope"></i>
-                    </span>
-                    <span class="icon is-small is-right">
-                        <i class="fa-solid fa-exclamation-triangle"></i>
-                    </span>
-                </div>
-                <p class="help is-danger">{{ email_help }}</p>
-            </div>
-            {% else %}
-            <div class="field">
-                <label class="label">邮箱</label>
-                <div class="control has-icons-left has-icons-right">
-                    <input
-                        class="input is-success is-family-monospace"
-                        type="email"
-                        value="{{ email }}"
-                    />
-                    <span class="icon is-small is-left">
-                        <i class="fa-solid fa-envelope"></i>
-                    </span>
-                    <span class="icon is-small is-right">
-                        <i class="fa-solid fa-check"></i>
-                    </span>
-                </div>
-                <p class="help is-success">{{ email_help }}</p>
-            </div>
-            {% endif %}
         </div>
-    </body>
+        {% if qq %}
+        <div class="fixed-grid has-2-cols">
+            <div class="grid">
+                <div class="field">
+                    <label class="label">QQ</label>
+                    <div class="control has-icons-left">
+                        <input class="input is-family-monospace" type="number" value="{{ qq }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-brands fa-qq"></i>
+                        </span>
+                    </div>
+                </div>
+                {% if qq ~ '@qq.com' == email %}
+                <div class="field">
+                    <label class="label">QQ</label>
+                    <div class="control has-icons-left has-icons-right">
+                        <input class="input is-family-monospace is-success" type="number" value="{{ qq }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-brands fa-qq"></i>
+                        </span>
+                        <span class="icon is-small is-right">
+                            <i class="fa-solid fa-check"></i>
+                        </span>
+                    </div>
+                    <p class="help is-success">QMAIL API 验证通过</p>
+                </div>
+                {% endif %}
+                <div class="field">
+                    <label class="label">QQ 昵称</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="text" value="{{ qq_nickname }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-wallet"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endif %}
+        <div class="fixed-grid has-2-cols">
+            <div class="grid">
+                <div class="field">
+                    <label class="label">注册时间</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="text" value="{{ register_at }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-door-open"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="field">
+                    <label class="label">最后操作时间</label>
+                    <div class="control has-icons-left">
+                        <input class="input" type="text" value="{{ last_sign_at }}" />
+                        <span class="icon is-small is-left">
+                            <i class="fa-solid fa-right-to-bracket"></i>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% if not verified %}
+        <div class="field">
+            <label class="label">邮箱</label>
+            <div class="control has-icons-left has-icons-right">
+                <input class="input is-danger is-family-monospace" type="email" value="{{ email }}" />
+                <span class="icon is-small is-left">
+                    <i class="fa-solid fa-envelope"></i>
+                </span>
+                <span class="icon is-small is-right">
+                    <i class="fa-solid fa-exclamation-triangle"></i>
+                </span>
+            </div>
+            <p class="help is-danger">{{ email_help }}</p>
+        </div>
+        {% else %}
+        <div class="field">
+            <label class="label">邮箱</label>
+            <div class="control has-icons-left has-icons-right">
+                <input class="input is-success is-family-monospace" type="email" value="{{ email }}" />
+                <span class="icon is-small is-left">
+                    <i class="fa-solid fa-envelope"></i>
+                </span>
+                <span class="icon is-small is-right">
+                    <i class="fa-solid fa-check"></i>
+                </span>
+            </div>
+            <p class="help is-success">{{ email_help }}</p>
+        </div>
+        {% endif %}
+    </div>
+</body>
+
 </html>
