🛠️ fix: html template -> last_sign_at
😡

--- a/templates/user-info.html.jinja
+++ b/templates/user-info.html.jinja
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="field">
-                    <label class="label">最后操作时间</label>
+                    <label class="label">最后签到时间</label>
                     <div class="control has-icons-left">
                         <input class="input" type="text" value="{{ last_sign_at }}" />
                         <span class="icon is-small is-left">
